--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,5 @@
 /* global fonts */
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Inter:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Inter:wght@300;400;500;700;800&display=swap');
 
 @tailwind base;
 @tailwind components;
